<resources>
    <string name="app_name">shop app</string>
    <string name="title_login">LOGIN</string>
    <string name="lbl_forget_password">Forget Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="et_hint_password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>


    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_condition">I Agree To The<u>Terms and Condition</u> </string>
    <string name="btn_register">Register</string>
    <string name="login"><u>Login</u></string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hint_email_id">Email ID</string>
    <string name="welcome">welcome</string>
    <string name="title_ForgetPassword">Forget Password?</string>
    <string name="btn_submit">submit</string>
    <string name="title_ForgetPasswordDesc">Enter your username and e-mail address we will send you a email to reset your password</string>
</resources>